--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
   },
   "dependencies": {
     "babel-polyfill": "^6.20.0",
+    "dotenv-webpack": "^1.5.4",
+    "flexboxgrid": "^6.3.1",
     "history": "^4.6.1",
     "lodash": "^4.17.4",
     "normalizr": "^3.0.1",
