--- a/package.json
+++ b/package.json
@@ -91,12 +91,14 @@
     "react-modal": "^2.0.6",
     "react-redux": "^5.0.1",
     "react-router-dom": "^4.1.1",
+    "react-slick": "^0.15.4",
     "react-tabs": "^2.0.0",
     "redux": "^3.6.0",
     "redux-form": "^7.0.0",
     "redux-saga": "^0.15.0",
     "redux-saga-thunk": "^0.5.0",
     "simple-load-script": "^1.0.2",
+    "slick-carousel": "^1.7.1",
     "styled-components": "^2.0.0",
     "styled-theme": "^0.3.0",
     "styled-tools": "^0.1.2",
